--- a/1445325/components.html
+++ b/1445325/components.html
@@ -37,8 +37,8 @@
         <h2>Формы</h2>
         <ul>
           <li>
-            <div class="form-input">
-              <input id="modal__user-name" type="text" placeholder="Ваше имя" required="required"/>
+            <div class="form-input form-input--undefined">
+              <input id="modal__user-name" type="text" placeholder="Ваше имя"/>
               <label for="modal__user-name">Ваше имя</label>
             </div>
           </li>
