--- a/4645084/index.html
+++ b/4645084/index.html
@@ -13,6 +13,7 @@
   <body>
 
     <header class="header">
+      <div class="progress-bar"></div>
       <div class="header-content_fixed">
         <div class="container d-flex space-between">
             <a  class="logo" href="index.html">
