--- a/villaride/index.html
+++ b/villaride/index.html
@@ -17,16 +17,16 @@
 
       <div class="container d-flex flex-justify-between flex-align-center h-100">
 
-        <a class="header-logo"href="#">
+        <a class="header-logo" href="index.html">
           <img src="image/logo.png" alt="logo">
         </a>
 
         <ul class="header-navigation d-flex flex-justify-between flex-align-center">
-          <li><a href="#">Каталог</a></li>
-          <li><a href="#">Галерея</a></li>
-          <li><a href="#">Видео</a></li>
-          <li><a href="#">Отзывы</a></li>
-          <li><a href="#">Контакты</a></li>
+          <li><a href="#catalog">Каталог</a></li>
+          <li><a href="#gallery">Галерея</a></li>
+          <li><a href="#video">Видео</a></li>
+          <li><a href="#feedback">Отзывы</a></li>
+          <li><a href="#contacts">Контакты</a></li>
         </ul>
 
         <div class="header-tel">
@@ -39,11 +39,11 @@
         <div class="mobile-navigation">
           &#9776;
           <ul>
-            <li><a href="#">Каталог</a></li>
-            <li><a href="#">Галерея</a></li>
-            <li><a href="#">Видео</a></li>
-            <li><a href="#">Отзывы</a></li>
-            <li><a href="#">Контакты</a></li>
+            <li><a href="#catalog">Каталог</a></li>
+            <li><a href="#gallery">Галерея</a></li>
+            <li><a href="#video">Видео</a></li>
+            <li><a href="#feedback">Отзывы</a></li>
+            <li><a href="#contacts">Контакты</a></li>
           </ul>
         </div>
 
@@ -62,11 +62,11 @@
         <div class="mobile-navigation">
           &#9776;
           <ul>
-            <li><a href="#">Каталог</a></li>
-            <li><a href="#">Галерея</a></li>
-            <li><a href="#">Видео</a></li>
-            <li><a href="#">Отзывы</a></li>
-            <li><a href="#">Контакты</a></li>
+            <li><a href="#catalog">Каталог</a></li>
+            <li><a href="#gallery">Галерея</a></li>
+            <li><a href="#video">Видео</a></li>
+            <li><a href="#feedback">Отзывы</a></li>
+            <li><a href="#contacts">Контакты</a></li>
           </ul>
         </div>
       </div>
@@ -76,6 +76,7 @@
     <main class="main">
 
       <div class="block-1">
+        <a name="contacts"></a>
 
         <div class="container d-flex flex-justify-between">
 
@@ -305,15 +306,15 @@
           <div class="block-3-video d-flex flex-justify-center flex-align-center">
 
             <div class="">
-              <img class="title" src="image/video.jpg" alt="video">
-              <img class="play-btn" src="image/play.png" alt="play">
-              <!-- <video width="400" height="300" controls="controls" poster="video/duel.jpg">
-                <source src="video/duel.ogv" type='video/ogg; codecs="theora, vorbis"'>
-                <source src="video/duel.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
-                <source src="video/duel.webm" type='video/webm; codecs="vp8, vorbis"'>
+              <!-- <img class="title" src="image/video.jpg" alt="video">
+              <img class="play-btn" src="image/play.png" alt="play"> -->
+              <video controls="controls" poster="video/1.jpg">
+                <!-- <source src="video/duel.ogv" type='video/ogg; codecs="theora, vorbis"'> -->
+                <source src="video/1.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+                <!-- <source src="video/duel.webm" type='video/webm; codecs="vp8, vorbis"'> -->
                 Тег video не поддерживается вашим браузером.
-                <a href="video/duel.mp4">Скачайте видео</a>.
-              </video> -->
+                <a href="video/1.mp4">Скачайте видео</a>.
+              </video>
             </div>
 
           </div>
@@ -323,7 +324,7 @@
       </div>
 
       <div class="block-4">
-
+        <a name="catalog"></a>
         <div class="bg-image position-1">
           <img src="image/bg-4-1.jpg" alt="bg-4-1">
         </div>
@@ -1106,7 +1107,7 @@
       <div class="block-5">
 
         <div class="container">
-
+          <a name="video"></a>
           <div class="title">
             <h2>Посмотрите наши видео</h2>
             <div class="decoration d-flex flex-justify-center">
@@ -1215,7 +1216,7 @@
       <div class="block-7">
 
         <div class="container">
-
+          <a name="feedback"></a>
           <div class="title">
             <h2>наши отзывы</h2>
             <div class="decoration d-flex flex-justify-center">
@@ -1295,6 +1296,7 @@
       </div>
 
       <div class="block-8">
+        <a name="gallery"></a>
 
         <div class="container">
 
@@ -1403,11 +1405,11 @@
         </a>
 
         <ul class="header-navigation d-flex flex-justify-between flex-align-center">
-          <li><a href="#">Каталог</a></li>
-          <li><a href="#">Галерея</a></li>
-          <li><a href="#">Видео</a></li>
-          <li><a href="#">Отзывы</a></li>
-          <li><a href="#">Контакты</a></li>
+          <li><a href="#catalog">Каталог</a></li>
+          <li><a href="#gallery">Галерея</a></li>
+          <li><a href="#video">Видео</a></li>
+          <li><a href="#feedback">Отзывы</a></li>
+          <li><a href="#contacts">Контакты</a></li>
         </ul>
 
         <div class="header-tel">
