--- a/villaride/index.html
+++ b/villaride/index.html
@@ -7,7 +7,7 @@
     <title>Вилларайд - Строительная компания</title>
     <meta name="description" content="Вилларайд - Строительная компания">
     <meta name="keywords" content="Вилларайд - Строительная компания">
-    <!-- <link rel="shortcut icon" href="favicon/favicon.ico"> -->
+    <link rel="shortcut icon" href="favicon/favicon.ico">
     <link rel="stylesheet" type="text/css" href="style/index.css">
     <!-- <script src="https://kit.fontawesome.com/418d1ec454.js" crossorigin="anonymous"></script> -->
   </head>
