--- a/uyut/index.html
+++ b/uyut/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="ru" dir="ltr">
+
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="format-detection" content="telephone=no">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <title>Уют - Ремонт и Отделка</title>
+    <meta name="description" content="Уют - Ремонт и Отделка">
+    <meta name="keywords" content="Уют - Ремонт и Отделка">
     <link rel="shortcut icon" href="favicon/favicon.ico">
     <link rel="stylesheet" type="text/css" href="style/index.css">
     <!-- <script src="https://kit.fontawesome.com/418d1ec454.js" crossorigin="anonymous"></script> -->
   </head>
+
   <body>
-    <header class="header">HEADER</header>
+
+    <header class="header">
+
+    </header>
+    
     <main class="main">MAIN</main>
     <footer class="footer">FOOTER</footer>
     <script src="script/index.js"></script>
