--- a/uyut/index.html
+++ b/uyut/index.html
@@ -559,6 +559,442 @@
 
       </div>
 
+      <div class="block-4">
+
+        <div class="title">
+          <h2><span>Отдельные услуги</span> по ремонту квартир</h2>
+          <h3>Ниже вы можете ознакомиться со всем спектром услуг по ремонту</h3>
+        </div>
+
+        <div class="block-4-content container">
+
+          <div class="block-4-nav d-flex flex-justify-between flex-align-center">
+            <div class="active">Потолки</div>
+            <div class="">Стены</div>
+            <div class="">Полы</div>
+            <div class="">Плотницкие работы</div>
+            <div class="">Электромонтажные работы</div>
+            <div class="">Сантехнические работы</div>
+            <div class="">Проекты и прочие услуги</div>
+          </div>
+
+          <div class="block-4-table">
+
+            <h2 class="title color-blue">Демонтаж</h2>
+
+            <div class="table-row-info">
+              <div class="number">№ п/п</div>
+              <div class="decoration-1"></div>
+              <div class="title">Наименование работ</div>
+              <div class="decoration-2"></div>
+              <div class="measure">Ед. изм.</div>
+              <div class="decoration-3"></div>
+              <div class="price">Цена, руб.</div>
+            </div>
+
+            <div class="h-line"></div>
+
+            <div class="table-row">
+              <div class="number">100</div>
+              <div class="decoration-1"></div>
+              <div class="title">размывка потолка</div>
+              <div class="decoration-2"></div>
+              <div class="measure">М<sup>2</sup></div>
+              <div class="decoration-3"></div>
+              <div class="price">90</div>
+            </div>
+
+            <div class="table-row">
+              <div class="number">101</div>
+              <div class="decoration-1"></div>
+              <div class="title">зачистка потолка (водоэмульсия)</div>
+              <div class="decoration-2"></div>
+              <div class="measure">М<sup>2</sup></div>
+              <div class="decoration-3"></div>
+              <div class="price">100</div>
+            </div>
+
+            <div class="table-row">
+              <div class="number">102</div>
+              <div class="decoration-1"></div>
+              <div class="title">зачистка потолка (масло)</div>
+              <div class="decoration-2"></div>
+              <div class="measure">М<sup>2</sup></div>
+              <div class="decoration-3"></div>
+              <div class="price">155</div>
+            </div>
+
+            <div class="table-row">
+              <div class="number">103</div>
+              <div class="decoration-1"></div>
+              <div class="title">демнотаж обоев</div>
+              <div class="decoration-2"></div>
+              <div class="measure">М<sup>2</sup></div>
+              <div class="decoration-3"></div>
+              <div class="price">70</div>
+            </div>
+
+            <div class="table-row">
+              <div class="number">104</div>
+              <div class="decoration-1"></div>
+              <div class="title">демнотаж подвесных потолков</div>
+              <div class="decoration-2"></div>
+              <div class="measure">М<sup>2</sup></div>
+              <div class="decoration-3"></div>
+              <div class="price">100</div>
+            </div>
+
+            <div class="table-row">
+              <div class="number">105</div>
+              <div class="decoration-1"></div>
+              <div class="title">демнотаж потолочного плинтуса</div>
+              <div class="decoration-2"></div>
+              <div class="measure">М<sup>2</sup></div>
+              <div class="decoration-3"></div>
+              <div class="price">30</div>
+            </div>
+
+            <div class="table-row">
+              <div class="number">106</div>
+              <div class="decoration-1"></div>
+              <div class="title">демнотаж плитки из полистерола</div>
+              <div class="decoration-2"></div>
+              <div class="measure">М<sup>2</sup></div>
+              <div class="decoration-3"></div>
+              <div class="price">60</div>
+            </div>
+
+            <div class="table-row">
+              <div class="number">107</div>
+              <div class="decoration-1"></div>
+              <div class="title">демнотаж лепнины</div>
+              <div class="decoration-2"></div>
+              <div class="measure">М<sup>2</sup></div>
+              <div class="decoration-3"></div>
+              <div class="price">140</div>
+            </div>
+
+
+          </div>
+
+          <div class="block-4-table">
+
+            <h2 class="title color-green">Монтаж</h2>
+
+            <div class="table-row-info">
+              <div class="number">№ п/п</div>
+              <div class="decoration-1"></div>
+              <div class="title">Наименование работ</div>
+              <div class="decoration-2"></div>
+              <div class="measure">Ед. изм.</div>
+              <div class="decoration-3"></div>
+              <div class="price">Цена, руб.</div>
+            </div>
+
+            <div class="h-line"></div>
+
+            <div class="table-row">
+              <div class="number">200</div>
+              <div class="decoration-1"></div>
+              <div class="title">размывка потолка</div>
+              <div class="decoration-2"></div>
+              <div class="measure">М<sup>2</sup></div>
+              <div class="decoration-3"></div>
+              <div class="price">90</div>
+            </div>
+
+            <div class="table-row">
+              <div class="number">201</div>
+              <div class="decoration-1"></div>
+              <div class="title">зачистка потолка (водоэмульсия)</div>
+              <div class="decoration-2"></div>
+              <div class="measure">М<sup>2</sup></div>
+              <div class="decoration-3"></div>
+              <div class="price">100</div>
+            </div>
+
+            <div class="table-row">
+              <div class="number">202</div>
+              <div class="decoration-1"></div>
+              <div class="title">зачистка потолка (масло)</div>
+              <div class="decoration-2"></div>
+              <div class="measure">М<sup>2</sup></div>
+              <div class="decoration-3"></div>
+              <div class="price">155</div>
+            </div>
+
+            <div class="table-row">
+              <div class="number">203</div>
+              <div class="decoration-1"></div>
+              <div class="title">демнотаж обоев</div>
+              <div class="decoration-2"></div>
+              <div class="measure">М<sup>2</sup></div>
+              <div class="decoration-3"></div>
+              <div class="price">70</div>
+            </div>
+
+            <div class="table-row">
+              <div class="number">204</div>
+              <div class="decoration-1"></div>
+              <div class="title">демнотаж подвесных потолков</div>
+              <div class="decoration-2"></div>
+              <div class="measure">М<sup>2</sup></div>
+              <div class="decoration-3"></div>
+              <div class="price">100</div>
+            </div>
+
+            <div class="table-row">
+              <div class="number">205</div>
+              <div class="decoration-1"></div>
+              <div class="title">демнотаж потолочного плинтуса</div>
+              <div class="decoration-2"></div>
+              <div class="measure">М<sup>2</sup></div>
+              <div class="decoration-3"></div>
+              <div class="price">30</div>
+            </div>
+
+            <div class="table-row">
+              <div class="number">206</div>
+              <div class="decoration-1"></div>
+              <div class="title">демнотаж плитки из полистерола</div>
+              <div class="decoration-2"></div>
+              <div class="measure">М<sup>2</sup></div>
+              <div class="decoration-3"></div>
+              <div class="price">60</div>
+            </div>
+
+            <div class="table-row">
+              <div class="number">207</div>
+              <div class="decoration-1"></div>
+              <div class="title">демнотаж лепнины</div>
+              <div class="decoration-2"></div>
+              <div class="measure">М<sup>2</sup></div>
+              <div class="decoration-3"></div>
+              <div class="price">140</div>
+            </div>
+
+
+          </div>
+
+          <div class="block-4-button d-flex flex-justify-center flex-align-center">
+            <button class="btn-red" type="button" name="button">Заказать консультацию</button>
+          </div>
+
+        </div>
+
+      </div>
+
+      <div class="block-5">
+
+        <div class="block-5-bg">
+          <img src="image/block-5-bg.png" alt="block-5-bg">
+        </div>
+
+        <div class="title">
+          <h2>Как сделать ремонт, который будет радовать вас долгие годы?</h2>
+        </div>
+
+        <div class="block-5-content container d-flex">
+
+          <form class="block-5-form" action="index.html" method="get">
+            <div class="input">
+              <input type="text" name="name" value="" placeholder="Ваше имя">
+              <input type="tel" name="tel" value="" placeholder="Телефон">
+            </div>
+            <div class="textarea">
+              <textarea name="message" placeholder="Текст сообщения"></textarea>
+            </div>
+            <div class="button">
+              <button class="btn-blue" type="button" name="button">ОТПРАВИТЬ</button>
+              <div class="form-checkbox d-flex flex-justify-center flex-align-center">
+                <input class="d-none" type="checkbox" name="block-5-privacy-checkbox" value="" id="block-5-privacy-checkbox">
+                <label class="checkbox-field" for="block-5-privacy-checkbox"><div></div></label>
+                <label class="checkbox-label" for="block-5-privacy-checkbox">
+                  <p>Я согласен на обработку данных</p>
+                  <a href="#">Политика конфиденциальности</a>
+                </label>
+              </div>
+            </div>
+          </form>
+
+          <div class="info">
+
+            <div class="list">
+              <div class="decoration"></div>
+              <p>Эскизный проект</p>
+            </div>
+
+            <div class="list">
+              <div class="decoration"></div>
+              <p>Рабочий проект</p>
+            </div>
+
+            <div class="list">
+              <div class="decoration"></div>
+              <p>Инженерные проекты (электричество, водоснабжение, канализация, слаботочные системы)</p>
+            </div>
+
+            <div class="list">
+              <div class="decoration"></div>
+              <p>Смета по работам и материалам</p>
+            </div>
+
+            <h2>Мы можем сделать проект бесплатно, если Вы закажете ремонт у наc.</h2>
+
+          </div>
+
+        </div>
+
+      </div>
+
+      <div class="block-6">
+
+        <div class="block-6-bg">
+          <img src="image/block-6-bg.jpg" alt="block-6-bg">
+        </div>
+
+        <div class="title">
+          <h2><span>Наши работы</span></h2>
+          <h3>Тут вы можете ознакомится с уже выполненой работой</h3>
+        </div>
+
+        <div class="block-6-content container">
+
+          <div class="card">
+
+              <div class="image">
+                <img src="image/block-6-card-1.jpg" alt="block-6-card-1">
+                <div class="icons">
+                  <div class="icon">
+                    <img src="image/block-6-card-1-1.jpg" alt="block-6-card-1-1">
+                  </div>
+                  <div class="icon">
+                    <img src="image/block-6-card-1-2.jpg" alt="block-6-card-1-2">
+                  </div>
+                  <div class="icon">
+                    <img src="image/block-6-card-1-3.jpg" alt="block-6-card-1-3">
+                  </div>
+                  <div class="icon">
+                    <img src="image/block-6-card-1-4.jpg" alt="block-6-card-1-4">
+                  </div>
+                </div>
+              </div>
+
+              <div class="info">
+                <h2>Дизайн трехкомнатной квартиры 80 м<sup>2</sup></h2>
+                <div class="decoration">
+                  <div class="line"></div>
+                  <div class="pointer"></div>
+                </div>
+                <p>По пожеланию заказчиков, для отделки стен были выбраны обои с рисунком, который вписывается в эстетику выбранного стиля.</p>
+                <button class="" type="button" name="button">Подробнее</button>
+              </div>
+
+          </div>
+
+          <div class="card">
+
+              <div class="image">
+                <img src="image/block-6-card-2.jpg" alt="block-6-card-2">
+                <div class="icons">
+                  <div class="icon">
+                    <img src="image/block-6-card-2-1.jpg" alt="block-6-card-2-1">
+                  </div>
+                  <div class="icon">
+                    <img src="image/block-6-card-2-2.jpg" alt="block-6-card-2-2">
+                  </div>
+                  <div class="icon">
+                    <img src="image/block-6-card-2-3.jpg" alt="block-6-card-2-3">
+                  </div>
+                  <div class="icon">
+                    <img src="image/block-6-card-2-4.jpg" alt="block-6-card-2-4">
+                  </div>
+                </div>
+              </div>
+
+              <div class="info">
+                <h2>Дизайн трехкомнатной квартиры в стиле минимализм</h2>
+                <div class="decoration">
+                  <div class="line"></div>
+                  <div class="pointer"></div>
+                </div>
+                <p>По пожеланию заказчиков, для отделки стен были выбраны обои с рисунком, который вписывается в эстетику выбранного стиля.</p>
+                <button class="" type="button" name="button">Подробнее</button>
+              </div>
+
+          </div>
+
+          <div class="h-line"></div>
+
+          <div class="card">
+
+              <div class="image">
+                <img src="image/block-6-card-3.jpg" alt="block-6-card-3">
+                <div class="icons">
+                  <div class="icon">
+                    <img src="image/block-6-card-1-1.jpg" alt="block-6-card-1-1">
+                  </div>
+                  <div class="icon">
+                    <img src="image/block-6-card-1-2.jpg" alt="block-6-card-1-2">
+                  </div>
+                  <div class="icon">
+                    <img src="image/block-6-card-1-3.jpg" alt="block-6-card-1-3">
+                  </div>
+                  <div class="icon">
+                    <img src="image/block-6-card-1-4.jpg" alt="block-6-card-1-4">
+                  </div>
+                </div>
+              </div>
+
+              <div class="info">
+                <h2>Дизайн трехкомнатной квартиры 80 м<sup>2</sup></h2>
+                <div class="decoration">
+                  <div class="line"></div>
+                  <div class="pointer"></div>
+                </div>
+                <p>По пожеланию заказчиков, для отделки стен были выбраны обои с рисунком, который вписывается в эстетику выбранного стиля.</p>
+                <button class="" type="button" name="button">Подробнее</button>
+              </div>
+
+          </div>
+
+          <div class="card">
+
+              <div class="image">
+                <img src="image/block-6-card-4.jpg" alt="block-6-card-4">
+                <div class="icons">
+                  <div class="icon">
+                    <img src="image/block-6-card-2-1.jpg" alt="block-6-card-2-1">
+                  </div>
+                  <div class="icon">
+                    <img src="image/block-6-card-2-2.jpg" alt="block-6-card-2-2">
+                  </div>
+                  <div class="icon">
+                    <img src="image/block-6-card-2-3.jpg" alt="block-6-card-2-3">
+                  </div>
+                  <div class="icon">
+                    <img src="image/block-6-card-2-4.jpg" alt="block-6-card-2-4">
+                  </div>
+                </div>
+              </div>
+
+              <div class="info">
+                <h2>Дизайн трехкомнатной квартиры в стиле минимализм</h2>
+                <div class="decoration">
+                  <div class="line"></div>
+                  <div class="pointer"></div>
+                </div>
+                <p>По пожеланию заказчиков, для отделки стен были выбраны обои с рисунком, который вписывается в эстетику выбранного стиля.</p>
+                <button class="" type="button" name="button">Подробнее</button>
+              </div>
+
+          </div>
+
+        </div>
+
+
+      </div>
+
     </main>
 
     <footer class="footer">
