--- a/uyut/index.html
+++ b/uyut/index.html
@@ -21,7 +21,7 @@
       <div class="header-content container d-flex flex-justify-between flex-align-center">
 
         <a href="index.html">
-          <img src="image/logo.svg" alt="logo">
+          <img src="image/logo.png" alt="logo">
         </a>
 
         <div class="header-info d-flex flex-justify-between">
@@ -302,7 +302,7 @@
           <div class="card">
             <div class="decoration"></div>
             <div class="image">
-              <img src="image/block-2-card-5.svg" alt="block-2-card-5">
+              <img src="image/block-2-card-5.jpg" alt="block-2-card-5">
             </div>
             <div class="content">
               <div class="title">
@@ -548,10 +548,6 @@
             <div class="info-2">
               <p>Ожидайте звонка</p>
               <h2>02</h2>
-            </div>
-            <div class="info-3">
-              <h2>03</h2>
-              <p>Получите смету и консультацию нашего специалиста</p>
             </div>
           </div>
 
@@ -990,8 +986,150 @@
 
           </div>
 
+          <div class="h-line"></div>
+
         </div>
 
+        <div class="block-6-buttons container d-flex">
+          <div class="buttons">
+            <button class="btn-red" type="button" name="button">Больше работ</button>
+            <button class="btn-blue" type="button" name="button">Связаться с нами</button>
+          </div>
+          <div class="text">
+            <p>Мы можем сделать проект бесплатно, если Вы закажете ремонт у нас.</p>
+          </div>
+        </div>
+
+
+      </div>
+
+      <div class="block-7">
+
+        <div class="title">
+          <h2><span>Наши отзывы</span></h2>
+          <h3>Мы всегда хотим чтобы наши заказчики были довольны нашей работой</h3>
+        </div>
+
+        <div class="block-7-content">
+
+          <div class="slider container">
+            <div class="slider-arrow left">
+              <i class="fas fa-chevron-left"></i>
+            </div>
+            <div class="slider-arrow right">
+              <i class="fas fa-chevron-right"></i>
+            </div>
+            <div class="slider-content">
+
+              <div class="card">
+                <div class="avatar">
+                  <img src="image/block-7-1.jpg" alt="block-7-1">
+                </div>
+                <div class="text">
+                  <h2>Николай Сергеев</h2>
+                  <h3>г. Екатеринбург</h3>
+                  <p>
+                    И нет сомнений, что непосредственные участники технического прогресса освещают чрезвычайно интересные особенности картины в целом,
+                    однако конкретные выводы, разумеется, ограничены исключительно образом мышления.
+                  </p>
+                </div>
+                <div class="decoration"></div>
+              </div>
+
+              <div class="card">
+                <div class="avatar">
+                  <img src="image/block-7-2.jpg" alt="block-7-2">
+                </div>
+                <div class="text">
+                  <h2>Мария Филатова</h2>
+                  <h3>г. Екатеринбург</h3>
+                  <p>
+                    И нет сомнений, что непосредственные участники технического прогресса освещают чрезвычайно интересные особенности картины в целом,
+                    однако конкретные выводы, разумеется, ограничены исключительно образом мышления.
+                  </p>
+                </div>
+                <div class="decoration"></div>
+              </div>
+
+            </div>
+            <div class="slider-navigation">
+              <div class="element active"><div class=""></div></div>
+              <div class="element"><div class=""></div></div>
+              <div class="element"><div class=""></div></div>
+              <div class="element"><div class=""></div></div>
+              <div class="element"><div class=""></div></div>
+              <div class="element"><div class=""></div></div>
+              <div class="element"><div class=""></div></div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
+      <div class="block-8">
+
+        <div class="block-8-bg">
+          <img src="image/block-8-bg.png" alt="block-8-bg">
+        </div>
+
+        <div class="block-8-content container d-flex">
+
+          <form class="block-8-form" action="index.html" method="get">
+            <h2>Акция на бесплатный дизайн</h2>
+            <p>Заполните форму и мы перезвоним Вам в течении 5-ти минут</p>
+            <div class="input">
+              <input type="text" name="name" value="" placeholder="Ваше имя">
+              <input type="tel" name="tel" value="" placeholder="Телефон">
+            </div>
+            <div class="textarea">
+              <textarea name="message" placeholder="Текст сообщения"></textarea>
+            </div>
+            <div class="button">
+              <button class="btn-blue" type="button" name="button">ОТПРАВИТЬ</button>
+              <div class="form-checkbox d-flex flex-justify-center flex-align-center">
+                <input class="d-none" type="checkbox" name="block-8-privacy-checkbox" value="" id="block-8-privacy-checkbox">
+                <label class="checkbox-field" for="block-8-privacy-checkbox"><div></div></label>
+                <label class="checkbox-label" for="block-8-privacy-checkbox">
+                  <p>Я согласен на обработку данных</p>
+                  <a href="#">Политика конфиденциальности</a>
+                </label>
+              </div>
+            </div>
+          </form>
+
+          <div class="info">
+            <div class="decoration"><div class=""></div></div>
+            <div class="image">
+              <img src="image/block-8-image-1.png" alt="block-8-image-1">
+            </div>
+            <div class="info-1">
+              <h2>01</h2>
+              <p>Отправте нам форму</p>
+            </div>
+            <div class="info-2">
+              <p>Ожидайте звонка</p>
+              <h2>02</h2>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
+      <div class="block-9">
+
+        <div class="block-9-bg">
+          <img src="image/block-9-bg.jpg" alt="block-9-bg">
+        </div>
+
+        <div class="title">
+          <h2><span>Мы на карте</span></h2>
+        </div>
+
+        <div class="block-9-map container">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4491.846421026273!2d37.603791697491395!3d55.742463187517195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54bac9fc13ca9%3A0x4b16fe357fece312!2z0KXRgNCw0Lwg0KXRgNC40YHRgtCwINCh0L_QsNGB0LjRgtC10LvRjw!5e0!3m2!1sru!2sru!4v1612453345315!5m2!1sru!2sru" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </div>
 
       </div>
 
@@ -1002,7 +1140,7 @@
       <div class="footer-content container d-flex flex-justify-between flex-align-center">
 
         <a href="index.html">
-          <img src="image/logo.svg" alt="logo">
+          <img src="image/logo.png" alt="logo">
         </a>
 
         <div class="header-info d-flex flex-justify-between">
