--- a/uyut/index.html
+++ b/uyut/index.html
@@ -74,6 +74,66 @@
 
       </div>
 
+      <div class="header-content-mobile-top">
+
+        <a href="index.html">
+          <img src="image/logo.png" alt="logo">
+        </a>
+
+        <div class="header-contacts d-flex flex-column flex-justify-between flex-align-center">
+
+          <div class="d-flex">
+            <div class="image">
+              <img src="image/tel.svg" alt="tel">
+            </div>
+            <a href="tel:+74957275724"><span>8 (495)</span> 72 75 724</a>
+          </div>
+
+          <button class="btn btn-blue" type="button" name="button">Заказать звонок</button>
+
+        </div>
+
+      </div>
+
+      <div class="header-content-mobile-bottom">
+
+        <div class="header-info d-flex flex-justify-between">
+
+          <div class="d-flex">
+            <div class="image">
+              <img src="image/pointer.svg" alt="pointer">
+            </div>
+            <div class="text">
+              <h2>Адрес</h2>
+              <p><span>г. Москва,</span> Золоторожский вал д.32, стр.4</p>
+            </div>
+          </div>
+
+          <div class="d-flex">
+            <div class="image">
+              <img src="image/time.svg" alt="time">
+            </div>
+            <div class="text">
+              <h2>Время работы</h2>
+              <p><span>Пн-Пт</span> 9:00 - 21:00</p>
+              <p><span>Сб-Вс</span> 10:00 - 20:00</p>
+            </div>
+          </div>
+
+          <div class="d-flex">
+            <div class="image">
+              <img src="image/email.svg" alt="email">
+            </div>
+            <div class="text">
+              <h2>E-mail Компании <span>Уют</span></h2>
+              <a href="mailto:istal2018door@gmail.com">istal2018door@gmail.com</a>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
     </header>
 
     <div class="navigation top">
@@ -81,14 +141,14 @@
       <ul class="header-navigation container d-flex">
 
         <li class="active">
-          <a href="#">Меню</a>
+          <a href="index.html">Меню</a>
           <div class="image">
             <img src="image/arrow-double.svg" alt="arrow-double">
           </div>
         </li>
 
         <li>
-          <a href="#">Услуги</a>
+          <a href="service.html">Услуги</a>
           <div class="image">
             <img src="image/arrow-double.svg" alt="arrow-double">
           </div>
@@ -102,7 +162,7 @@
         </li>
 
         <li>
-          <a href="#">Портфолио</a>
+          <a href="portfolio-card.html">Портфолио</a>
           <div class="image">
             <img src="image/arrow-double.svg" alt="arrow-double">
           </div>
@@ -116,14 +176,14 @@
         </li>
 
         <li>
-          <a href="#">О компании</a>
+          <a href="about.html">О компании</a>
           <div class="image">
             <img src="image/arrow-double.svg" alt="arrow-double">
           </div>
         </li>
 
         <li>
-          <a href="#">Контакты</a>
+          <a href="contacts.html">Контакты</a>
           <div class="image">
             <img src="image/arrow-double.svg" alt="arrow-double">
           </div>
@@ -131,7 +191,32 @@
 
       </ul>
 
+      <ul class="header-navigation-mobile container d-flex">
+
+        <li class="active">
+          <a href="index.html">Меню</a>
+          <div class="image">
+            <img src="image/arrow-double.svg" alt="arrow-double">
+          </div>
+        </li>
+
+        <li class="trigram">
+          <i class="fas fa-bars"></i>
+        </li>
+
+      </ul>
+
     </div>
+
+    <!-- <div class="breadcrumb container d-flex">
+      <div class="nav-item">
+        <a href="index.html">Главная</a>
+      </div>
+      <i class="fas fa-angle-double-right"></i>
+      <div class="nav-item">
+        <a href="index.html">Услуги</a>
+      </div>
+    </div> -->
 
     <main class="main">
 
@@ -549,6 +634,11 @@
               <p>Ожидайте звонка</p>
               <h2>02</h2>
             </div>
+            <div class="info-3">
+              <h2>03</h2>
+              <p>Получите смету</p>
+              <p>и консультацию нашего специалиста</p>
+            </div>
           </div>
 
         </div>
@@ -566,12 +656,13 @@
 
           <div class="block-4-nav d-flex flex-justify-between flex-align-center">
             <div class="active">Потолки</div>
-            <div class="">Стены</div>
-            <div class="">Полы</div>
-            <div class="">Плотницкие работы</div>
-            <div class="">Электромонтажные работы</div>
-            <div class="">Сантехнические работы</div>
-            <div class="">Проекты и прочие услуги</div>
+            <div class="link">Стены</div>
+            <div class="link">Полы</div>
+            <div class="link">Плотницкие работы</div>
+            <div class="link">Электромонтажные работы</div>
+            <div class="link">Сантехнические работы</div>
+            <div class="link">Проекты и прочие услуги</div>
+            <div class="trigram"><i class="fas fa-bars"></i></div>
           </div>
 
           <div class="block-4-table">
@@ -1193,11 +1284,71 @@
 
       </div>
 
+      <div class="footer-content-mobile-top">
+
+        <a href="index.html">
+          <img src="image/logo.png" alt="logo">
+        </a>
+
+        <div class="footer-contacts d-flex flex-column flex-justify-between flex-align-center">
+
+          <div class="d-flex">
+            <div class="image">
+              <img src="image/tel.svg" alt="tel">
+            </div>
+            <a href="tel:+74957275724"><span>8 (495)</span> 72 75 724</a>
+          </div>
+
+          <button class="btn btn-blue" type="button" name="button">Заказать звонок</button>
+
+        </div>
+
+      </div>
+
+      <div class="footer-content-mobile-bottom">
+
+        <div class="footer-info d-flex flex-justify-between">
+
+          <div class="d-flex">
+            <div class="image">
+              <img src="image/pointer.svg" alt="pointer">
+            </div>
+            <div class="text">
+              <h2>Адрес</h2>
+              <p><span>г. Москва,</span> Золоторожский вал д.32, стр.4</p>
+            </div>
+          </div>
+
+          <div class="d-flex">
+            <div class="image">
+              <img src="image/time.svg" alt="time">
+            </div>
+            <div class="text">
+              <h2>Время работы</h2>
+              <p><span>Пн-Пт</span> 9:00 - 21:00</p>
+              <p><span>Сб-Вс</span> 10:00 - 20:00</p>
+            </div>
+          </div>
+
+          <div class="d-flex">
+            <div class="image">
+              <img src="image/email.svg" alt="email">
+            </div>
+            <div class="text">
+              <h2>E-mail Компании <span>Уют</span></h2>
+              <a href="mailto:istal2018door@gmail.com">istal2018door@gmail.com</a>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
     </footer>
 
     <div class="navigation nav-bottom">
 
-      <ul class="header-navigation container d-flex">
+      <ul class="bottom-navigation container d-flex">
 
         <li class="">
           <a href="#">Меню</a>
@@ -1225,6 +1376,18 @@
 
         <li>
           <a href="#">Контакты</a>
+        </li>
+
+      </ul>
+
+      <ul class="bottom-navigation-mobile container d-flex">
+
+        <li class="">
+          <a href="#">Меню</a>
+        </li>
+
+        <li class="trigram">
+          <i class="fas fa-bars"></i>
         </li>
 
       </ul>
