--- a/uyut/index.html
+++ b/uyut/index.html
@@ -136,78 +136,6 @@
 
     </header>
 
-    <div class="navigation top">
-
-      <ul class="header-navigation container d-flex">
-
-        <li class="active">
-          <a href="index.html">Меню</a>
-          <div class="image">
-            <img src="image/arrow-double.svg" alt="arrow-double">
-          </div>
-        </li>
-
-        <li>
-          <a href="service.html">Услуги</a>
-          <div class="image">
-            <img src="image/arrow-double.svg" alt="arrow-double">
-          </div>
-        </li>
-
-        <li>
-          <a href="#">Цены</a>
-          <div class="image">
-            <img src="image/arrow-double.svg" alt="arrow-double">
-          </div>
-        </li>
-
-        <li>
-          <a href="portfolio-card.html">Портфолио</a>
-          <div class="image">
-            <img src="image/arrow-double.svg" alt="arrow-double">
-          </div>
-        </li>
-
-        <li>
-          <a href="#">Отзывы</a>
-          <div class="image">
-            <img src="image/arrow-double.svg" alt="arrow-double">
-          </div>
-        </li>
-
-        <li>
-          <a href="about.html">О компании</a>
-          <div class="image">
-            <img src="image/arrow-double.svg" alt="arrow-double">
-          </div>
-        </li>
-
-        <li>
-          <a href="contacts.html">Контакты</a>
-          <div class="image">
-            <img src="image/arrow-double.svg" alt="arrow-double">
-          </div>
-        </li>
-
-      </ul>
-
-      <ul class="header-navigation-mobile container d-flex">
-
-        <li class="active">
-          <a href="index.html">Меню</a>
-          <div class="image">
-            <img src="image/arrow-double.svg" alt="arrow-double">
-          </div>
-        </li>
-
-        <li class="trigram">
-          <i class="fas fa-bars"></i>
-        </li>
-
-      </ul>
-
-    </div>
-
     <!-- <div class="breadcrumb container d-flex">
       <div class="nav-item">
         <a href="index.html">Главная</a>
@@ -219,6 +147,59 @@
     </div> -->
 
     <main class="main">
+
+      <div class="navigation top">
+
+        <ul class="header-navigation container d-flex">
+          <input class="d-none" type="checkbox" name="drop-menu" value="" id="drop-menu">
+          <li class="menu-btn active">
+            <a href="#">Меню</a>
+            <div class="image">
+              <img src="image/arrow-double.svg" alt="arrow-double">
+            </div>
+            <ul class="drop-menu-list">
+              <li><div></div><a href="#">Квартира однокомнатная</a></li>
+              <li class="active"><div></div><a href="#">Квартира двухкомнатная</a></li>
+              <li><div></div><a href="#">Квартира трехкомнатная</a></li>
+              <li><div></div><a href="#">Квартира четырехкомнатная</a></li>
+              <li><div></div><a href="#">Натяжные потолки</a></li>
+              <li><div></div><a href="#">Ремонт квартиры</a></li>
+              <li><div></div><a href="#">Ремонт ванных комнат</a></li>
+              <li><div></div><a href="#">Ремонт офисов</a></li>
+              <li><div></div><a href="#">Ремонт в новостройке</a></li>
+              <li><div></div><a href="#">Ремонт коттеджей</a></li>
+              <li><div></div><a href="#">Дизайн проект квартир</a></li>
+              <li><div></div><a href="#">Согласование перепланировки</a></li>
+              <li><div></div><a href="#">Доставка стройматериалов</a></li>
+              <li><div></div><a href="#">Послестроительная уборка</a></li>
+              <li><div></div><a href="#">Гид по чистовым материалам</a></li>
+            </ul>
+          </li>
+          <li><a href="service.html">Услуги</a></li>
+          <li><a href="#">Цены</a></li>
+          <li><a href="portfolio-card.html">Портфолио</a></li>
+          <li><a href="#">Отзывы</a></li>
+          <li><a href="about.html">О компании</a></li>
+          <li><a href="contacts.html">Контакты</a></li>
+
+        </ul>
+
+        <ul class="header-navigation-mobile container d-flex">
+
+          <li class="active">
+            <a href="index.html">Меню</a>
+            <div class="image">
+              <img src="image/arrow-double.svg" alt="arrow-double">
+            </div>
+          </li>
+
+          <li class="trigram">
+            <i class="fas fa-bars"></i>
+          </li>
+
+        </ul>
+
+      </div>
 
       <div class="block-1">
 
