--- a/velomall/index.html
+++ b/velomall/index.html
@@ -1621,22 +1621,89 @@
             <a href="#"><i class="fab fa-youtube"></i></a>
           </div>
           <h2>Принимаем к оплате:</h2>
-          <div class="icons">
-
+          <div class="payments">
+            <div class="image-contain">
+              <img src="image/visa.jpg" alt="visa">
+            </div>
+            <div class="image-contain">
+              <img src="image/mc.jpg" alt="mc">
+            </div>
+            <div class="image-contain">
+              <img src="image/mir.jpg" alt="mir">
+            </div>
+            <div class="image-contain">
+              <img src="image/ym.jpg" alt="ym">
+            </div>
+            <div class="image-contain">
+              <img src="image/sb.jpg" alt="sb">
+            </div>
+            <div class="">
+              в кредит
+            </div>
           </div>
         </div>
 
         <div class="links">
-
+          <div class="">
+            <h2>Компания</h2>
+            <a href="#">О компании</a>
+            <a href="#">Вакансии</a>
+            <a href="#">Сертификаты</a>
+            <a href="#">Отзывы</a>
+          </div>
+          <div class="">
+            <h2>Покупателям</h2>
+            <a href="#">Каталог</a>
+            <a href="#">Доставка</a>
+            <a href="#">Пользовательское соглашение</a>
+          </div>
         </div>
 
         <div class="tel">
-
+          <h2><span>8 (495)</span> 132-13-41</h2>
+          <div class="block">
+            <div class="image-contain">
+              <img src="image/placeholder.svg" alt="placeholder">
+            </div>
+            <div class="text">
+              <h2>Адрес:</h2>
+              <p>Москва, ул.Братиславская,  д.22 (2 этаж)</p>
+            </div>
+          </div>
+          <div class="block">
+            <div class="image-contain">
+              <img src="image/envelope.svg" alt="envelope">
+            </div>
+            <div class="text">
+              <h2>E-mail:</h2>
+              <a href="#">velomall@mail.ru</a>
+            </div>
+          </div>
+          <div class="block">
+            <div class="image-contain">
+              <img src="image/chat.svg" alt="chat">
+            </div>
+            <div class="text">
+              <h2>Напишите нам</h2>
+            </div>
+          </div>
+          <div class="alter">
+            <a class="image-contain" href="#">
+              <img src="image/viber.jpg" alt="viber">
+            </a>
+            <a class="image-contain" href="#">
+              <img src="image/whatsapp.jpg" alt="whatsapp">
+            </a>
+          </div>
         </div>
 
-        <div class="form">
-
-        </div>
+        <form class="footer-subscribe" action="index.html" method="post">
+          <h2>Подпишись</h2>
+          <p>на velomall</p>
+          <input type="text" name="name" value="" placeholder="Ваше имя">
+          <input type="tel" name="tel" value="" placeholder="Телефон">
+          <button class="blue-gradient" type="button" name="button">Подписаться</button>
+        </form>
 
       </div>
 
