--- a/velomall/index.html
+++ b/velomall/index.html
@@ -97,7 +97,7 @@
               <img src="image/bicycle-w.svg" alt="bicycle">
             </div>
             <p>Велосипеды</p>
-
+            <a href="catalog.html?search=bicycles"></a>
             <div class="header-bottom-nav-hover">
 
               <div class="nav-menu">
@@ -410,6 +410,7 @@
               <img src="image/nasos.png" alt="nasos">
             </div>
             <p>Аксесуары</p>
+            <a href="catalog.html?search=accessories"></a>
           </div>
 
           <div class="d-flex flex-justify-center flex-align-center">
@@ -1563,7 +1564,7 @@
                 <p>Москва, Сигнальный проезд, д.16, стр.2</p>
                 <p>м. Владыкино, МЦК Владыкино</p>
               </div>
-              <button class="blue-gradient" stype="button" name="button">Заказать звонок</button>
+              <button class="blue-gradient" type="button" name="button">Заказать звонок</button>
             </div>
 
             <div class="right">
@@ -1587,7 +1588,7 @@
                 <p><span>Пн-Сб:</span> с 10:00 до 21:00</p>
                 <p><span>Вс:</span> с 10:00 до 20:00</p>
               </div>
-              <button class="green-gradient" stype="button" name="button">Написать нам</button>
+              <button class="green-gradient" type="button" name="button">Написать нам</button>
             </div>
           </div>
 
